--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "node eslint/test/enforce-foo-bar.test.js"
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
@@ -17,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@types/jsx-ast-utils": "^3.3.1",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
